# FastAPI-E-Commerce-Backend

./: .env.example  .gitignore  Dockerfile  README.md  database.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: b7248f3cb970_fix_wishlist_length.py
core/: config.py  decoration.py  deps.py  exception_handler.py  jwt.py  logging_config.py  security.py
exceptions/: auth_exceptions.py  cart_exceptions.py  product_exceptions.py  wishlist_exceptions.py
models/: cart_item_model.py  cart_model.py  user_model.py  wishlist_model.py
routes/: auth_route.py  cart_route.py  product_route.py  user_route.py  wishlist_route.py
schemas/auth/: facebook_login_request.py  google_login_request.py  login_request.py  login_response.py  refresh_token_request.py  register_request.py  user_response.py
schemas/cart/: cart_create.py  cart_response.py
schemas/product/: product_details_response.py  product_sum_response.py
schemas/wishlist/: wishlist_create.py  wishlist_response.py
services/: auth_services.py
services/auth/: facebook_login_services.py  google_login_services.py  login_services.py  refresh_token_services.py  register_services.py
services/cart/: cart_services.py
services/ebay/: ebay_auth.py  ebay_services.py
services/facebook/: facebook_auth.py
services/google/: google_auth.py
services/product/: product_services.py
services/wishlist/: wishlist_services.py
tests/: conftest.py
tests/core/: test_decoration.py  test_deps.py  test_exception_handler.py  (+3 more)
(+36 files in other folders)
